# AerialS

./: CMakeLists.txt  README.md  package.xml
msg/: DeliberativeState.dot  DeliberativeState.msg  Rational.msg  Task.msg
srv/: Executor.srv  ReasonerBuilder.srv  RequirementManager.srv  TaskCloser.srv  TaskDelayer.srv  TaskExecutor.srv  TaskLengthener.srv
