<?xml version="1.0"?>
<package format="2">
  <name>aerials</name>
  <version>1.0.0</version>
  <description>A ROS package defining Actions and Services for interacting with a deliberative tier</description>
  <maintainer email="riccardo.debenedictis@istc.cnr.it">Riccardo De Benedictis</maintainer>
  <maintainer email="gloria.beraldo@istc.cnr.it">Gloria Beraldo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
